// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DrawerBody component when a children is provided should match snapshot 1`] = `
<div
  className="sc-bdfBwQ bhwiHB"
>
  <div
    className="sc-gsTCUz llcQRC"
    onScroll={[Function]}
  >
    <div>
      Custom children
    </div>
  </div>
</div>
`;

exports[`DrawerBody component when children and component are provided should match snapshot 1`] = `
<section
  className="sc-bdfBwQ bhwiHB"
>
  <div
    className="sc-gsTCUz llcQRC"
    onScroll={[Function]}
  >
    <div>
      Custom children
    </div>
  </div>
</section>
`;
